assets/css/index.css
@font-face {
  font-family: 'Nimbus Sans';
  src: url('../../assets/fonts/NimbusSansDOT-Bold.otf') format('opentype');
  font-weight: 700;
  font-style: bold;
}

@font-face {
  font-family: 'Nimbus Sans';
  src: url('../../assets/fonts/NimbusSansDOT-BoldExte.otf') format('opentype');
  font-weight: 800;
  font-style: bold;
}

@font-face {
  font-family: 'Nimbus Sans';
  src: url('../../assets/fonts/NimbusSansDOT-Regu.otf') format('opentype');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Nimbus Sans';
  src: url('../../assets/fonts/NimbusSansDOT-ReguItal.otf') format('opentype');
  font-weight: 500;
  font-style: italic;
}

body, html{
  font-family: 'Nimbus Sans';
  font-size: 28px;
  font-weight: 500;
  font-style: normal;
  padding :0;
  margin:0;
  height: auto;
  white-space: nowrap;
  overflow-x: hidden;
}

h1{
  margin: 0;
  padding: 0;
  font-size: 36px;
  font-weight: 800;
}

h2{
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-style: italic;
  font-size: 36px;
}

h3{
  margin: 0;
  padding: 0;
  margin-bottom: 10px;
  font-weight: 700;
  font-size: 28px;
}

h4{
  margin: 0;
  padding: 0;
  font-weight: 500;
  font-style: italic;
  font-size: 28px;
}

h5{
  line-height: 48px;
  font-size: 28px;
  padding: 0;
  margin:0;
  font-weight: 500;
  font-style: normal;
}

/* Style copied in captions*/
p{
  line-height: 48px;
  padding: 0;
  margin-bottom: 28px;
  margin-top:0;
}

section{
  margin-bottom: 100px;
}

.visuallyHidden {
  opacity: 0;
  transition: opacity 200ms;
}

.disable-select {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.topSpaceWrapper{
  color: black;
  width: 80vw;
  height: 100vh;
  position: absolute;
  overflow: hidden;
  backface-visibility: hidden;
  z-index: 4;
  /* use GPU acceleration */
  transform: translate3d(0,0,0);
  pointer-events:none;

}

.bottomSpaceWrapper{
  color: black;
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  overflow-x: hidden;
  position: absolute;
}

/*============================================================
Main Menu
============================================================*/

.mainMenu{
  margin-left: calc(10vw - 30px);
  position: absolute;
  width: 60vw;
  z-index:98;
}


.siteTitle{
  position: absolute;

  top:0;
  z-index: 99;
  overflow-x: hidden;

  display: flex;
  align-items: center;
  justify-content: center;

  height: 106px;
  width: 100%;
  cursor: pointer;
}

.location{
  position: absolute;

  /*width: 60vw;*/
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 150ms;
  /* use GPU acceleration */
  transform: translate3d(0,0,0);
}

.location:hover h2, .siteTitle:hover h1{
}

.location a, .location h2{
  text-decoration: none;
  color: black;
  cursor: pointer;
}


/*============================================================
Header
============================================================*/

.header{
  width: 80vw;
  box-sizing: border-box;
  position: absolute;
  height: auto;
}

.beamBox{
  box-sizing: border-box;
  overflow: hidden;
  width: 80vw;
  padding: 30px;
  padding-bottom: 0;
}

.beam{
  box-sizing: border-box;
  display: block;
  height: 13px;
  width: 100%;
}

.arrowBox{
  position: relative;
  width: 100%;
  padding: 30px;
  padding-top:0;
  padding-bottom:0;

}

.headerPillarAndIcon{
  z-index: 200;
  position: absolute;
  width: calc(10vw - 30px);
  height: 67px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  transition: opacity 300ms;
}

.headerArrowContainer{
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.headerArrow{
  transition: transform 200ms;
  transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -webkit-transform: rotate(0deg);
  -webkit-transform-origin: 50%% 50%%; /* Chrome, Safari, Opera */
  -webkit-backface-visibility: hidden;
  -webkit-transform-style: preserve-3d;
}


.headerArrow-rotate-90{
  transform: rotate3d(0, 0, 1, 90deg);
  -moz-transform: rotate3d(0, 0, 1, 90deg);
  -webkit-transform: rotate3d(0, 0, 1, 90deg);
}


.pillarBox{

}

.pillar{
  transform: translateY(-3px);
  box-sizing: border-box;
  display: block;
  height: 100%;
  width: 13px;
  z-index: 100;
}

/*============================================================
Top Page
============================================================*/

.topSpace{
  height: 100vh;
  position: relative;
  z-index: 1;
  overflow: hidden;
  transform-origin: top left;
  transition:  width 300ms;
  box-sizing: border-box;
  pointer-events:auto;
}


.topSpaceOpen{
    width: 100%;
}

.topSpaceClosed{
    width: 25%;
}

.topSpace .content{
  display: flex;
  flex-direction: column;
  justify-content: center;

  overflow: hidden;
  width:80vw;
  height: 100vh;
}

.gallery{
  padding-top: 160px;
  left:0;
  box-sizing: border-box;
  width: 80vw;
  height: auto;
}

.contentArrowContainer{
  position:absolute;
  left:0;
  top:53%;
  display: flex;
  justify-content: space-between;
  height: 0;
  width: 80vw;
  z-index: 300;
}

.contentArrowContainer h2{
    display: none;
  }


.galleryArrowLeftContainer{
  margin-left: 10%;
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;

}

.galleryArrowRight{
}

.galleryArrowLeft{
  transform: rotateZ(180deg);
}

.galleryArrowRightContainer{
  margin-right: 10%;
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.gallery::-webkit-scrollbar {
  display: none;
}

.galleryMover{
  transition: transform 400ms;
  font-size: 0;
  display: flex;
}

.gallery img{
  max-width: 50vw;
  max-height:70vh;
  width: auto;
  height: auto;
}

.frame {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-shrink: 0;
  flex-grow: 0;
  width: 80vw;
  height: 66vh;
}

.caption{
  height: 10vh;
  width: 100%;
  font-size: 24px;
  font-style: italic;
  text-align: center;
  margin-top: 20px;
}

.frame:first-child {
  /*margin-left: 15vw;*/
}

.frame:last-child {
  /*margin-right: 15vw;*/
}

.imgWrapper{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  box-sizing: border-box;
}

/*============================================================
bottomSpace Page
============================================================*/

.bottomSpace{
  box-sizing: border-box;
  height: 100vh;
  position: relative;
  width: 80%;
  z-index: 0;
  overflow: hidden;
}

.bottomSpace .content {
  overflow-y: scroll;
  display: flex;
  justify-content: center;
  width:80vw;
  height: 100%;
}


.wrap{
  padding-top: 250px;
  width: 60vw;
  max-width: 1000px;
  white-space: normal;
  margin-bottom: 180px;
}

.text{
}

.logoAbout{
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 15px;
  margin-bottom: 50px;
}

.contact{
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.connectList{
  width: 100%;
  display: flex;
  justify-content: flex-start;
}

.connect a{
  display: inline-block;
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.contact a {
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.contact p, .connect p{
  border-bottom: 3px solid black;
  font-style: italic;
  margin-right: 48px;
}

.locationItem{
  width: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
}

.locationItem a {
  color: inherit;
  background: transparent;
  text-decoration: none;
}

.locationItem:first-child{
  border-top: none;
}

.spacer {
  height: 100px;
}

.optionList{
  margin-bottom: 40px;
}

.optionItem{
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 94px;
}

.optionItem:last-child{
  border-bottom: none;
}

.listItem {
  display: flex;
  align-items: center;

  height: 94px;
}

.listItem:last-child{
  border-bottom: none;
}

.map{
  width: 100%;
  height: 500px;
  pointer-events: none;
}

.imbeddedMap{
  height: 500px;
  width: 100%;
}

.mapFix{
  background:transparent;
   position:relative;
   width:100%;
   height:500px; /* your iframe height */
   top:500px;  /* your iframe height */
   margin-top:-500px;  /* your iframe height */
}

/* Iframe Booking Feature
*/

label .select-item {
  border: none;
  border-top: 3px solid black;
}

@media only screen and (max-width: 769px) {
  h1{
    font-size: 26px;
  }

  h2{
    font-size: 26px;
  }

  h3{
    margin-bottom: 23px;
    font-size: 26px;
  }

  h4{
    font-style: italic;
    font-size: 26px;
  }

  /* Style copied in captions*/
  p{
    line-height: 30px;
    font-size: 26px;
  }

  .wrap{
    padding-top: 150px;
  }

  section{
    margin-bottom: 75px;
  }

  .contentArrowContainer{
    transform: translateY(30vh);
  }

  .contentArrowContainer h2{
    line-height: 0px;
    display: block;
    }

  .galleryArrowRight{
    transform: scale(0.5)
  }

  .galleryArrowLeft{
    transform: rotateZ(180deg) scale(0.5);
  }

  .headerArrow{
    transform: scale(0.5)
  }

  .pillar{
    width: 5px;
  }

  .beam{
    height: 5px;
  }

  .gallery img{
    max-width: 75vw;
    max-height:70vh;
    width: auto;
    height: auto;
  }

  .logoAbout{
    height: 80px;
  }

  .logoAboutSVG{
    transform: scale(0.5)
  }

  .siteTitle{
    height: 86px;
  }

  .location{
    height: 80px;
  }

  .mainMenu{
    width: calc(80vw - 60px);
    margin-left: 0;
  }

  .frame {
    align-items: flex-end;
  }

}

@media only screen and (max-width: 400px) {
  h1{
    font-size: 14px;
  }

  h2{
    font-size: 14px;
  }

  h3{
    margin-bottom: 23px;
    font-size: 14px;
  }

  h4{
    font-style: italic;
    font-size: 14px;
  }

  /* Style copied in captions*/
  p{
    line-height: 16px;
    font-size: 14px;
  }

  section{
    margin-bottom: 50px;
  }

  .caption{
    font-size: 14px;
  }

}


@media only screen and (min-width: 768px) {

}

